# copper

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
entity/: Cargo.toml
entity/src/: candle.rs  lib.rs  symbol.rs  user.rs
fe/: package-lock.json  package.json
migrations/: 20240722022545_init.sql
script/: install  reset_db
src/: api.rs  config.rs  db.rs  historical.rs  history.rs  main.rs  prelude.rs
src/api/: response.rs
src/api/response/: api_error.rs  api_response.rs  field_errors.rs
